# covvfit-

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: test.yml
api/: index.html
api/dynamics/: index.html
api/numeric/: index.html
api/plotting/: index.html
api/preprocessing/: index.html
api/quasimultinomial/: index.html
cli/: index.html
data/: .gitignore
data/main/: README.md
docs/: api.md  cli.md  index.md  models.md
docs/api/: dynamics.md  index.md  numeric.md  plotting.md  preprocessing.md  quasimultinomial.md
docs/running_deconv/: freyja.md  lollipop.md
examples/: 20231102_multinom.ipynb  20231102_multinom.qmd  analyze_comparison.py  analyze_predictions.py  deconvolution.py  deprecated-frequentist_fitting.py  frequentist_fitting-JAX.py  frequentist_fitting.ipynb  frequentist_fitting.py  frequentist_fitting.qmd  frequentist_notebook.py  frequentist_notebook_jax.py  frequentist_notebook_numpyro.py  make_figure_1.py  splines_demonstration.py
models/: index.html
running_deconv/: prepare_covvfit_input.md
running_deconv/freyja/: index.html
running_deconv/lollipop/: index.html
search/: search_index.json
src/covvfit/: __init__.py  _deconvolution.py  _dynamics.py  _frequentist.py  _frequentist_jax.py  _numeric.py  _padding.py  _plotting.py  _preprocess_abundances.py  _quasibinomial.py  _quasimultinomial.py  _random.py  _splines.py  cli.py
tests/: test_frequentist_jax.py  test_installed.py  test_numeric.py  test_padding.py  test_quasimultinomial.py
tests/simulation/: test_logistic.py  test_sde.py
workflows/: README.md  bootstrap_simulation.smk
workflows/compare_clinical/: README.md  compare_clinical.smk  config_ba1.yaml  config_ba1ba2.yaml  config_ba4ba5.yaml  config_ba4ba5_2.yaml  config_jn1.smk  (+1 more)
(+11 files in other folders)
