[tool.poetry]
name = "covvfit"
version = "0.1.0"
description = ""
authors = ["David Dreifuss <david.dreifuss@bsse.ethz.ch>", "Paweł Czyż <pczyz@protonmail.com>"]
readme = "README.md"
packages = [{include = "covvfit", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.3"
black = "^23.10.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
