[tool.poetry]
name = "covvfit"
version = "0.1.0"
description = ""
authors = ["David Dreifuss <david.dreifuss@bsse.ethz.ch>", "Paweł Czyż <pczyz@protonmail.com>"]
readme = "README.md"
packages = [{include = "covvfit", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.25"
matplotlib = "^3.8.0"
pymc = "^5.9.1"
scipy = "^1.11.3"
jax = "^0.4.20"
jaxlib = "^0.4.20"
diffrax = "^0.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.3"
black = "^23.10.1"
pre-commit = "^3.5.0"
pyright = "^1.1.333"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.7"

[tool.ruff]
select = ["E", "F", "I001"]
ignore = ["E721", "E731", "F722"]
ignore-init-module-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
